--- a/principal.html
+++ b/principal.html
@@ -10,6 +10,7 @@
     <header>
         <div class="container">
             <h1>Blog de Videojuegos</h1>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSbfZ7LYO9ii6TsyQUbs50zztgAoZ9bMUYYEg&s" alt="logo">
             <nav>
                 <ul>
                     <li><a href="#">Inicio</a></li>
